@@ -59,6 +59,8 @@
         fixed uninitialized variable when calling 
           pfdhcplistener -h
           (http://www.packetfence.org/mantis/view.php?id=640)
+        fixed code execution in util.pm when calling pfmon -h
+          (http://www.packetfence.org/mantis/view.php?id=641)
 
 1.8.1
         authorized @ as first symbol in password
